src/test/ui/coherence/coherence-overlap-trait-alias.stderr
error[E0283]: type annotations needed
  --> $DIR/coherence-overlap-trait-alias.rs:15:6
   |
LL | impl C for u32 {}
   |      ^ cannot infer type for type `u32`
   |
   = note: cannot satisfy `u32: C`
note: required by a bound in `C`
  --> $DIR/coherence-overlap-trait-alias.rs:11:1
   |
LL | trait C {}
   | ^^^^^^^ required by this bound in `C`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
